--- a/LC_MESSAGES/zh_CN/index.po
+++ b/LC_MESSAGES/zh_CN/index.po
@@ -1,19 +1,17 @@
-# SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
+#, 2010 
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: DuckDuckGo\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-08-04 18:39-0400\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2010-09-12 10:35+0800\n"
+"Last-Translator: Woosley Xu <redicaps@gmail.com>\n"
+"Language-Team: Chinese(Simplified) <redicaps@gmail.com>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #: lib/DDG/WWW/Index.pm:4558 lib/DDG/WWW/Index.pm:5668
